Edit textarea input more visible. Solves #2

--- a/client/styles/elements.less
+++ b/client/styles/elements.less
@@ -70,7 +70,7 @@ textarea.edit{
   padding: 10px;
   width: 720px;
   height: auto;
-  border: 1px solid RGBA(255,255,255,0);
+  border: 1px solid RGBA(255,255,255,0.3);
   resize: none;
   &:hover{
     border: 1px solid #fff;
